--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "vuenotesapp",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.4.21"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.8"
-  }
+   "name": "vuenotesapp",
+   "version": "0.0.0",
+   "private": true,
+   "type": "module",
+   "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d dist",
+      "preview": "vite preview"
+   },
+   "dependencies": {
+      "vue": "^3.4.21"
+   },
+   "devDependencies": {
+      "@vitejs/plugin-vue": "^5.0.4",
+      "gh-pages": "^6.1.1",
+      "vite": "^5.2.8"
+   }
 }
